# lonely-coder

./: analysis-report.md  ideas.md
.git 2/: config
pair-terminal/: Cargo.toml
pair-terminal/crates/pair-client/: Cargo.toml
pair-terminal/crates/pair-client/src/: connect.rs  join.rs  main.rs  match_cmd.rs  pty_guest.rs  pty_host.rs  raw_guard.rs  share.rs  tui.rs
pair-terminal/crates/pair-common/: Cargo.toml
pair-terminal/crates/pair-common/src/: crypto.rs  lib.rs  protocol.rs  recording.rs  types.rs
pair-terminal/crates/pair-server/: Cargo.toml
pair-terminal/crates/pair-server/src/: db.rs  main.rs  matching.rs  session.rs  ws_handler.rs
