[workspace]
resolver = "2"
members = [
    "crates/pair-common",
    "crates/pair-client",
    "crates/pair-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
