[package]
name = "pair-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pair"
path = "src/main.rs"

[dependencies]
pair-common = { path = "../pair-common" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
crossterm = "0.28"
portable-pty = "0.9"
ratatui = "0.29"
