[package]
name = "pair-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pair-server"
path = "src/main.rs"

[dependencies]
pair-common = { path = "../pair-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.8", features = ["ws", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
